# cancer-research

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  app.py  cancer-explorer.html  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
benchmark/: REPORT.md  gold_standard.json  results.json
cancer_protein_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cancer_tool/: __init__.py  dynamics.py  metrics.py  mutations.py  pathogenicity.py  pipeline.py  pockets.py  scoring.py  structures.py  targets.py  uniprot.py  viewer.py
data/: AKT1.json  BRAF.json  CTNNB1.json  EGFR.json  ERBB2.json  ESR1.json  FBXW7.json  FLT3.json  GNA11.json  GNAQ.json  HRAS.json  IDH1.json  IDH2.json  KIT.json  KRAS.json  MAP2K1.json  NRAS.json  PIK3CA.json  POLE.json  PTEN.json  RAC1.json  RHOA.json  SF3B1.json  SMAD4.json  SPOP.json  TP53.json  U2AF1.json  index.json
docs/: METHODS.md
scripts/: benchmark.py  embed_data.py  make_demo_gif.sh  precompute.py  record_demo.cjs  record_helix_gif.py
tests/: test_api.py  test_benchmark.py  test_dynamics.py  test_metrics.py  test_mutations.py  test_pathogenicity.py  test_pipeline_offline.py  test_pockets.py  test_scoring.py  test_validation.py
tests/fixtures/kras/: af_prediction.json  alphamissense.csv  hotspots_kras.json  uniprot_search.json
